# RayTracing_Weekend

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  camera.h  cmake_install.cmake  color.h  hittable.h  hittable_list.h  image_metal_grey.ppm  image_newgreay.ppm  img.ppm  interval.h  main.cc  main_repeat.cc  material.h  ray.h  raytracer  rtweekend.h  sphere.h  vec3.h  xRayTracingWeekend.txt
.old/: main_before_cam_class.cc  main_repeat.cc  main_splic_getcolor_writecolor.cc  main_without_plane.cc  rip.c  sandbox.c
old/: main_color_by_surface_normal.cc  main_to_cout.cc  temp.c
old images/: image_DARK.ppm  image_grey_100.ppm  image_grey_110.ppm  image_grey_130.ppm  image_grey_20.ppm  image_grey_50deep.ppm  image_grey_80.ppm  image_lambert.ppm  image_noacne40.ppm  img_disk.ppm  img_disk0001.ppm
